refactor: change type of changePass and method of ForgotPass api
